fixed button spacing

--- a/app/client/css/app.css
+++ b/app/client/css/app.css
@@ -103,7 +103,7 @@ body {
   float: right;
   position: relative;
   padding-right: .25%;
-  margin-top: 4%;
+  margin-top: 3.5%;
   height: 40%;
   width: auto;
 }
@@ -112,7 +112,7 @@ body {
   float: right;
   position: relative;
   padding-right: .25%;
-  margin-top: 4%;
+  margin-top: 3.5%;
   height: 40%;
   width: auto;
 }
@@ -121,7 +121,7 @@ body {
   float: right;
   position: relative;
   padding-right: .25%;
-  margin-top: 4%;
+  margin-top: 3.5%;
   height: 40%;
   width: auto;
 }
@@ -130,7 +130,7 @@ body {
   float: right;
   position: relative;
   padding-right: .25%;
-  margin-top: 4%;
+  margin-top: 3.5%;
   height: 40%;
   width: auto;
 }
